apps/nextcloud/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-route
  namespace: nextcloud
spec:
  parentRefs:
    - name: gateway-cloudflare
      namespace: kube-system
  hostnames:
    - "nextcloud.maddin.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 8080
